--- a/Makefile.SCALAPACK
+++ b/Makefile.SCALAPACK
@@ -1,11 +1,17 @@
+# HPCS -- Works with Open MPI 1.8.0 using ScaLAPACK from MKL
+#
+# module purge
+# module load default-wilkes
+# module unload intel/impi cuda intel/mkl
+# module load intel/mkl/11.1.2.144
+# module load fs395/openmpi-1.8.0/intel
+
 PLAT   = _pdsyev_darwin
 FC    = mpif90
 
-FFLAGS = -fpp -D__ELPA -O3 -ipo -xHost -traceback -g -I$(ELPA_HOME)/include/elpa/modules
-FFLAGS += -D__2STAGE
-#-align -mcmodel=medium -traceback
+FFLAGS = -O3 -ipo -xHost -traceback -g
 
-LIB = -L$(ELPA_HOME)/lib -I$(ELPA_HOME)/include -lelpa -lmkl_scalapack_lp64 -lmkl_blacs_openmpi_lp64 -lmkl_intel_lp64 -lmkl_sequential -lmkl_core -lpthread -lm -mavx
+LIB = -lmkl_scalapack_lp64 -lmkl_blacs_intelmpi_lp64 -lmkl_intel_lp64 -lmkl_sequential -lmkl_core -lpthread -lm
 
 OBJ = accuracy.o timer.o input.o pdlaprnt_local.o  
 
