--- a/Makefile.OMPI-INTEL.ELPA
+++ b/Makefile.OMPI-INTEL.ELPA
@@ -7,7 +7,7 @@
 # module load fs395/openmpi-1.8.0/intel
 # module load fs395/elpa/2013.11-v8/intel-openmpi
 
-PLAT   = _elpa_darwin
+PLAT   = _OMPI-INTEL_ELPA
 FC    = mpif90
 
 FFLAGS = -fpp -D__ELPA -O3 -ipo -xHost -traceback -g -I$(ELPA_HOME)/include/elpa/modules
@@ -15,7 +15,7 @@ FFLAGS = -fpp -D__ELPA -O3 -ipo -xHost -traceback -g -I$(ELPA_HOME)/include/elpa
 # 2-stage ELPA routines disabled, slow runtime noticed
 #FFLAGS += -D__2STAGE
 
-LIB = -L$(ELPA_HOME)/lib -I$(ELPA_HOME)/include -lelpa -lmkl_scalapack_lp64 -lmkl_blacs_openmpi_lp64 -lmkl_intel_lp64 -lmkl_sequential -lmkl_core -lpthread -lm -mavx
+LIB = -L$(ELPA_HOME)/lib -lelpa -lmkl_scalapack_lp64 -lmkl_blacs_openmpi_lp64 -lmkl_intel_lp64 -lmkl_sequential -lmkl_core -lpthread -lm -mavx
 
 OBJ = accuracy.o timer.o input.o pdlaprnt_local.o  
 
@@ -40,5 +40,5 @@ input.o:  input.f90 accuracy.o
 	$(FC) -c input.f90 $(FFLAGS)
 
 clean:
-	rm -f $(OBJ) *.mod *.o *.x
+	rm -f $(OBJ) *.mod *.o
 
