--- a/Makefile.OMPI-INTEL
+++ b/Makefile.OMPI-INTEL
@@ -1,24 +1,30 @@
 # HPCS -- Works with Open MPI 1.8.0 using ScaLAPACK from MKL
-#
-# module purge
-# module load default-wilkes
-# module unload intel/impi cuda intel/mkl
-# module load intel/mkl/11.1.2.144
-# module load fs395/openmpi-1.8.0/intel
 
 PLAT   = _OMPI-INTEL
 FC    = mpif90
 
 FFLAGS = -fpp -O3 -ipo -xHost -traceback -g
+FFLAGS_OMP = -openmp $(FFLAGS)
 
 LIB = -lmkl_scalapack_lp64 -lmkl_blacs_openmpi_lp64 -lmkl_intel_lp64 -lmkl_sequential -lmkl_core -lpthread -lm
+LIB_MP = -lmkl_scalapack_lp64 -lmkl_blacs_openmpi_lp64 -lmkl_intel_lp64 -lmkl_core -lmkl_intel_thread -lpthread -lm
 
 OBJ = accuracy.o timer.o input.o pdlaprnt_local.o  
 
-default:   diag$(PLAT).x
+default:  diag$(PLAT).x diag$(PLAT)_OMP.x
+
+env:
+	module purge
+	module load default-wilkes
+	module unload intel/impi cuda intel/mkl
+	module load intel/mkl/11.1.2.144
+	module load fs395/openmpi-1.8.0/intel
 
 diag$(PLAT).x:  $(OBJ) diag_pdsyev.o
 	$(FC) $(FFLAGS) -o diag$(PLAT).x $(OBJ) diag_pdsyev.o $(LIB)
+
+diag$(PLAT)_OMP.x:  $(OBJ) diag_pdsyev.o
+	$(FC) $(FFLAGS_OMP) -o diag$(PLAT)_OMP.x $(OBJ) diag_pdsyev.o $(LIB_MP)
 
 diag_pdsyev.o:  diag_pdsyev.f90 $(OBJ) 
 	$(FC) -c diag_pdsyev.f90 $(FFLAGS)
