--- a/Makefile.OMPI-INTEL
+++ b/Makefile.OMPI-INTEL
@@ -9,7 +9,7 @@ FFLAGS_OMP = -openmp $(FFLAGS)
 LIB = -lmkl_scalapack_lp64 -lmkl_blacs_openmpi_lp64 -lmkl_intel_lp64 -lmkl_sequential -lmkl_core -lpthread -lm
 LIB_MP = -lmkl_scalapack_lp64 -lmkl_blacs_openmpi_lp64 -lmkl_intel_lp64 -lmkl_core -lmkl_intel_thread -lpthread -lm
 
-OBJ = accuracy.o timer.o input.o pdlaprnt_local.o  
+OBJ = accuracy.o timer.o input.o pdlaprnt_local.o 
 
 default:  diag$(PLAT).x diag$(PLAT)_OMP.x
 
@@ -20,14 +20,14 @@ env:
 	module load intel/mkl/11.1.2.144
 	module load fs395/openmpi-1.8.0/intel
 
-diag$(PLAT).x:  $(OBJ) diag_pdsyev.o
-	$(FC) $(FFLAGS) -o diag$(PLAT).x $(OBJ) diag_pdsyev.o $(LIB)
+diag$(PLAT).x:  $(OBJ) dirac_exomol_eigen.o
+	$(FC) $(FFLAGS) -o diag$(PLAT).x $(OBJ) dirac_exomol_eigen.o $(LIB)
 
-diag$(PLAT)_OMP.x:  $(OBJ) diag_pdsyev.o
-	$(FC) $(FFLAGS_OMP) -o diag$(PLAT)_OMP.x $(OBJ) diag_pdsyev.o $(LIB_MP)
+diag$(PLAT)_OMP.x: $(OBJ) dirac_exomol_eigen.o
+	$(FC) $(FFLAGS_OMP) -o diag$(PLAT)_OMP.x $(OBJ) dirac_exomol_eigen.o $(LIB_MP)
 
-diag_pdsyev.o:  diag_pdsyev.f90 $(OBJ) 
-	$(FC) -c diag_pdsyev.f90 $(FFLAGS)
+dirac_exomol_eigen.o:  dirac_exomol_eigen.f90 $(OBJ) 
+	$(FC) -c dirac_exomol_eigen.f90 $(FFLAGS)
 
 pdlaprnt_local.o: pdlaprnt_local.f
 	$(FC) -c pdlaprnt_local.f $(FFLAGS)
