--- a/Makefile.REFERENCE-OMPI_MP
+++ b/Makefile.REFERENCE-OMPI_MP
@@ -1,14 +1,14 @@
 # HPCS -- Works with Open MPI 1.8.0 using ScaLAPACK from MKL
 
-PLAT   = _OMPI-INTEL
+PLAT   = _OMPI-INTEL_OMP
 FC    = mpif90
 
 ELPA_INC = -D__ELPA -D__ELPA_TIMING -I$(ELPA_HOME)/include/elpa/modules
-ELPA_LIB = -L$(ELPA_HOME)/lib -lelpa
+ELPA_LIB = -L$(ELPA_HOME)/lib -lelpa_mt
 
-FFLAGS = -fpp $(ELPA_INC) -O3 -xAVX -traceback -g
+FFLAGS = -openmp -fpp $(ELPA_INC) -O3 -xAVX -traceback -g
 
-LIB = $(ELPA_LIB) ${SCALAPACK_HOME}/lib/libscalapack.a -lmkl_intel_lp64 -lmkl_sequential -lmkl_core -lpthread -lm
+LIB = $(ELPA_LIB) ${SCALAPACK_HOME}/lib/libscalapack.a -lmkl_intel_lp64 -lmkl_core -lmkl_intel_thread -lpthread -lm
 
 OBJ = accuracy.o timer.o input.o
 
@@ -20,8 +20,8 @@ env:
 	module unload intel/impi cuda intel/mkl
 	module load intel/mkl/11.1.2.144
 	module load fs395/openmpi-1.8.0/intel
-	module load fs395/scalapack/2.0.2/intel-ompi
-	module load fs395/elpa/2013.11-v8/intel-ompi
+	module load fs395/scalapack/2.0.2/intel-ompi_smp
+	module load fs395/elpa/2013.11-v8/intel-ompi_smp
 
 diag$(PLAT).x:  $(OBJ) dirac_exomol_eigen.o
 	$(FC) $(FFLAGS) -o diag$(PLAT).x $(OBJ) dirac_exomol_eigen.o $(LIB)
