--- a/makes/Makefile.DARWIN.IMPI
+++ b/makes/Makefile.DARWIN.IMPI
@@ -13,7 +13,7 @@ ELPA_LIB =
 
 FFLAGS = -fpp $(ELPA_INC) $(IPM_INC) -O3 -xAVX -traceback -g
 
-SCALAPACK_LIB= -lmkl_scalapack_lp64 -lmkl_blacs_intelmpi_lp64
+SCALAPACK_LIB= -L${MKLROOT} -lmkl_scalapack_lp64 -lmkl_blacs_intelmpi_lp64
 LIB = $(ELPA_LIB) ${SCALAPACK_LIB} -lmkl_intel_lp64 -lmkl_sequential -lmkl_core -lpthread -lm $(IPM_LIB)
 
 OBJ = accuracy.o timer.o input.o
@@ -23,8 +23,12 @@ default:  diag$(PLAT).x
 env:
 	module purge
 	module load default-wilkes
-	module unload cuda intel/mkl
+	module unload intel/impi cuda intel/mkl intel/cce intel/fce
+	module load intel/fce/14.0.2.144
+	module load intel/cce/14.0.2.144
 	module load intel/mkl/11.1.2.144
+	module load intel/impi/4.1.3.048
+	module load fs395/elpa/2013.11-v8/intel-impi-avx
 
 diag$(PLAT).x:  $(OBJ) dirac_exomol_eigen.o
 	$(FC) $(FFLAGS) -o diag$(PLAT).x $(OBJ) dirac_exomol_eigen.o $(LIB)
